# Degree

./: .gitignore  MA.sln  TODO
Debug/: MA.ilk
MA/: Abstract.cpp  Atom.h  CMakeLists.txt  Cli.cpp  Cli.h  Edge.h  Generator.cpp  Generator.h  Hipothesis.cpp  Hipothesis.h  ImageHandler.cpp  ImageHandler.h  Learning.h  LineWrap.cpp  LineWrap.h  MA.cbp  MA.cpp  MA.depend  MA.layout  MA.vcxproj  Matcher.cpp  Matcher.h  MatchingSystem.h  MenuState.cpp  MenuState.h  Model.cpp  Model.h  ModelSelectionState.cpp  ModelSelectionState.h  NewModelState.cpp  NewModelState.h  Part.h  PointWrap.cpp  PointWrap.h  Primitive.cpp  Relationship.cpp  Relationship.h  SampleSelectionState.cpp  SampleSelectionState.h  Solid.cpp  (+9 more)
MA/Debug/: vc140.idb
MA/Debug/MA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MA/archive/: Abstract.h  DetectionTest.cpp  ImageHandler.cpp  Matcher.h  MenuState.cpp  Model.cpp  ModelSelectionState.h  NewModelState.h  Primitive.h  SampleSelectionState.h  StateMachine.cpp  generationTest1.cpp  models.cpp
archive/: Abstract.cpp  DetectionTest.cpp  Figure.cpp  Figure.h  Relationship.h  Solid.cpp  Solid.h  State.cpp  State.h  StateMachine.h  WindowPack.cpp  old_model_generation.cpp  phsample  testlearntestmatch.cpp
samples/: 8.pgm  a1.PGM  h4.PGM  rect.pgm  square.pgm
wyniki/: przyklad_dzialania_interfejsu.txt  test_cases.ods  wyniki.txt
wyniki/1_trojkat_rownoboczny/: Degree  opis.txt  trojkat_rownoboczny
wyniki/1_trojkat_rownoboczny/test/falszywe/: 00  00.pgm  10  11  11.pgm
wyniki/1_trojkat_rownoboczny/test/prawdziwe/: 7.pgm  7.pgm.assignment.txt  8.pgm  8.pgm.assignment.txt  9.pgm  9.pgm.assignment.txt
wyniki/1_trojkat_rownoboczny/trenowanie/probki_negatywne/: 5_spelnienie_relacji  6_spelnienie_relacji
wyniki/1_trojkat_rownoboczny/trenowanie/probki_pozytywne/: 4_spelnienie_relacji
wyniki/2_trojkat_prostokatny/: note.txt  opis.txt  trojkat_prostokatny
wyniki/2_trojkat_prostokatny/test/falszywe/: 20  20.PGM  21  21.PGM
wyniki/2_trojkat_prostokatny/test/prawdziwe/: 18.PGM
wyniki/2_trojkat_prostokatny/trenowanie/probki_negatywne/: 15  16
wyniki/2_trojkat_prostokatny/trenowanie/probki_pozytywne/: 12  13  14
wyniki/3_trojkat_ogolny/: 22  23  25  26  27  28  33  34  opis.txt  t2  trojkat
wyniki/3_trojkat_ogolny/test/falszywe/: 34.pgm
wyniki/3_trojkat_ogolny/test/prawdziwe/: 30.PGM  31.PGM  32.PGM  rtri.pgm  tri.pgm  triangleA.pgm  triangleAsmall.pgm  triangleB.pgm  triangleBsmall.pgm
wyniki/4_kwadrat/: 35  37  40  46  kwadrat  opis.txt
wyniki/4_kwadrat/test/prawdziwe/: 42.PGM  43.PGM  44.PGM  squareAsmall.pgm  squareB.pgm  squareBsmall.pgm
wyniki/5_prostokat/: 47  48  49  50  51  56  57  note.txt  opis.txt  prostokat
wyniki/5_prostokat/test/falszywe/: 56.PGM
wyniki/5_prostokat/test/prawdziwe/: 52.PGM  53.PGM  54.PGM  rect.pgm  rectsmall.pgm  (+1 more)
wyniki/6_domek/: 58  59  62  63  68  69  70  domek  opis.txt
wyniki/6_domek/p/: ddd
wyniki/6_domek/trash/: 66.PGM  67.PGM  domekplus.PGM
(+5 files in other folders)
